--- a/Lab5/style.css
+++ b/Lab5/style.css
@@ -1,89 +1,1 @@
-   body {
-        font: 24px Helvetica;
-        background: #999999;
-    }
-
-    #main {
-        min-height: 500px;
-        margin: 0px;
-        padding: 0px;
-        display: flex;
-        flex-flow: row;
-    }
- 
-    #main > article {
-        text-align: center;
-
-      
-        padding: 5px;
-        border: 1px solid #cccc33;
-        border-radius: 7pt;
-        background: #dddd88;
-        flex: 3 1 60%;
-        order: 2;
-        width: 500px;
-        height: 500px;
-    }
-
-    #main > nav {
-        
-        padding: 5px;
-        border: 1px solid #8888bb;
-        border-radius: 7pt;
-        background: #ccccff;
-        flex: 1 6 20%;
-        order: 1;
-        width: 200px;
-        height: 500px;
-    }
-  
-    #main > aside {
-        
-        padding: 5px;
-        border: 1px solid #8888bb;
-        border-radius: 7pt;
-        background: #ccccff;
-        flex: 1 6 20%;
-        order: 3;
-        width: 200px;
-        height: 500px;
-    }
- 
-    footer {
-        display: block;
-        padding: 5px;
-        min-height: 100px;
-        border: 1px solid #eebb55;
-        border-radius: 7pt;
-        background: #ffeebb;
-        text-align: left;
-    font: 12px Times;
-    }
-    header {
-        display: block;
-        padding: 5px;
-        min-height: 100px;
-        border: 1px solid #eebb55;
-        border-radius: 7pt;
-        background: #ffeebb;
-        text-align: left;
-    
-                font: 30px Helvetica;
-    }
- 
-    /* Too narrow to support three columns */
-    @media all and (max-width: 640px) {
-        #main, #page {
-            flex-direction: column;
-        }
-
-        #main > article, #main > nav, #main > aside {
-        /* Return them to document order */
-           /* order: 0;*/
-        }
-  
-        #main > nav, #main > aside, header, footer {
-            min-height: 50px;
-            max-height: 50px;
-        }
-    }
+ body{font:25px Helvetica;background:#999}#main{min-height:800px;margin:0;padding:0;display:flex;flex-flow:row;border-top:3px solid #000;border-bottom:3px solid #000;}#main article{padding:40px;border-left:3px solid #000;border-right:3px solid #000;background:#dd8;flex:3 1 60%;order:2}#main nav{padding:40px;background:#ccf;flex:1 6 20%;order:1;text-align:right}#main aside{padding:40px;background:#ccf;flex:1 6 20%;order:3}header,footer{display:block;padding:5px 20px;min-height:100px;background:#feb;display:flex;align-items:center}h1{font-size:30px}footer{font-size:14px}@media all and (max-width:640px){#main,#page{flex-direction:column}#main article,#main nav,#main aside{order:0;text-align:left}#main article{border:0;border-top:3px solid #000;border-bottom:3px solid #000}#main nav,#main aside,#main header,#main footer{min-height:100px;max-height:100px}}
